force-app/main/default/objects/Message__c/fields/ChatId__c.field-meta.xml
<CustomField>
    <fullName>ChatId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ChatId</label>
    <referenceTo>Chat__c</referenceTo>
    <relationshipLabel>Messages</relationshipLabel>
    <relationshipName>Messages</relationshipName>
    <type>Lookup</type>
</CustomField>