force-app/main/default/objects/Message__c/fields/Co_Ordinator_Message__c.field-meta.xml
<CustomField>
    <fullName>Co_Ordinator_Message__c</fullName>
    <label>Co-Ordinator Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>