force-app/main/default/objects/Message__c/fields/User_Message__c.field-meta.xml
<CustomField>
    <fullName>User_Message__c</fullName>
    <description>User Message Store Here</description>
    <label>User Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>